--- a/weather-map.css
+++ b/weather-map.css
@@ -121,25 +121,6 @@ path {
     border-bottom: 1px solid #8f8c8f;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* The switch - the box around the slider */
 .switch {
     position: relative;
     display: inline-block;
@@ -147,14 +128,12 @@ path {
     height: 17px;
 }
 
-/* Hide default HTML checkbox */
 .switch input {
     opacity: 0;
     width: 0;
     height: 0;
 }
 
-/* The slider */
 .slider {
     position: absolute;
     cursor: pointer;
@@ -162,7 +141,7 @@ path {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #f0bda4;
+    background-color: #595583;
     -webkit-transition: .4s;
     transition: .4s;
 }
@@ -180,8 +159,7 @@ path {
 }
 
 input:checked + .slider {
-    /*background-color: #383971;*/
-    background-color: #92859f;
+    background-color: #edaba5;
 }
 
 input:checked + .slider:before {
@@ -190,7 +168,6 @@ input:checked + .slider:before {
     transform: translateX(13px);
 }
 
-/* Rounded sliders */
 .slider.round {
     border-radius: 34px;
 }
